fixed the spacing on the header while on small screens

--- a/style.css
+++ b/style.css
@@ -1,12 +1,17 @@
+/*The below styling code is used for all three webpages. It includes items that they all share. Aka the header and the footer*/
+    /*The navbarNav code below is used to style the text black in the header*/
 .navbarNav{
     color:black;
-}
+} 
+    /*The ul css code below  is used to style the list in the header to have no bulletin points*/
 ul{
     list-style-type: none;
 }
+    /*the header css code below is used to style a border on the bottom to have a dashed black line*/
 header{
     border-bottom:10px dashed black
 }
+    /*the nav-link css code below is used to style the list of navigational points that sit in the right side of the navbar.*/
 .nav-link{
     list-style-type:horizontal;
     margin-right: 0;
@@ -14,24 +19,29 @@ header{
     color:black;
     margin-bottom:0;
 }
+    /*the navbar-brand css code below is used to style my name that is in the left side of the navbar.*/
 .navbar-brand{
     margin-left: 0;
     padding:20px;
     margin-bottom:0;
     color:black;
+    width: 20px;
 }
+    /* the row css code below is used to make space after each row and lead to a better layout*/
 .row{
     margin-bottom:20px;
 }
+    /* the footer code below is used to format the footer of all three pages */
 footer{
-    background-color:rgb(0, 255, 85);
+    background-color:rgb(153, 250, 186);
     color:white;
     text-align: center;
     padding:20px;
     border-top: 10px solid black;
 }
+    /* the body code below is used to format the body of all three pages */
 body{
-    background-color: rgb(143, 255, 180);
+    background-color: rgb(219, 255, 231);
 }
 
 .container{
@@ -49,6 +59,39 @@ body{
         color: white;
 }       
 .btn-primary {
-    background-color:coral;
-    border-color:coral;
+    background-color:rgb(0, 255, 85);
+    border-color:rgb(0, 255, 85);
+}
+/*
+  The width of the wrapper will be 1024px
+  at browser widths above 768px
+*/
+.wrapper {
+    width: 100%;
+}
+  #main-content,
+#sidebar {
+  width: 50%;
+}
+#sidebar {
+    float: right;
+}
+
+@media screen and (max-width: 640px){
+    .wrapper {
+        width: 100%;
+    }
+      #main-content,
+    #sidebar {
+      width: 100%;
+
+    }
+    #sidebar {
+        float: right;
+        background-color:lightgray;
+        border-top:2px solid gray 
+    }
+    #main-content{
+        padding-left:25%;
+    }
 }
